force-app/main/default/objects/leaseworks__Calendar_Period__c/leaseworks__Calendar_Period__c.object-meta.xml
<CustomObject>
    <description>Load the accounting periods for accounting purposes. 
It is recommended to load the accounting periods at the beginning of the year for the whole year.
Population Requirement Details: Perform any necessary data cleansing to remove duplicates
[MODULE: Accounting]
[LOAD: Yes]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Accounting Period</label>
    <nameField>
        <label>Accounting Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>