force-app/main/default/objects/leaseworks__Calendar_Period__c/fields/leaseworks__End_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__End_Date__c</fullName>
    <inlineHelpText>Calendar Period End Date</inlineHelpText>
    <label>Z_Unused_2309 End Date</label>
    <type>Date</type>
</CustomField>