force-app/main/default/objects/leaseworks__Calendar_Period__c/fields/leaseworks__End_Date_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__End_Date_F__c</fullName>
    <formula>IF(
  leaseworks__Month__c  = 12,
  DATE  ( leaseworks__Year__c, 12, 31 ),
  DATE( leaseworks__Year__c, leaseworks__Month__c+ 1, 1 ) - 1 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>