force-app/main/default/objects/leaseworks__Calendar_Period__c/fields/leaseworks__Start_Date_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Start_Date_F__c</fullName>
    <formula>DATE( leaseworks__Year__c, leaseworks__Month__c, 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>