force-app/main/default/objects/leaseworks__Calendar_Period__c/fields/leaseworks__Year__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Year__c</fullName>
    <label>_Year</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>