force-app/main/default/objects/leaseworks__Calendar_Period__c/fields/leaseworks__Year_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Year_New__c</fullName>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>