force-app/main/default/objects/leaseworks__Calendar_Period__c/validationRules/leaseworks__Decimals_are_not_allowed_for_Month_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Decimals_are_not_allowed_for_Month_Field</fullName>
    <active>true</active>
    <description>Decimals Are Not Allowed For Month Field</description>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,
NOT(ISBLANK(leaseworks__Month__c)) &amp;&amp; MOD(leaseworks__Month__c, 1) &lt;&gt; 0)</errorConditionFormula>
    <errorDisplayField>leaseworks__Month__c</errorDisplayField>
    <errorMessage>Decimals are not allowed.</errorMessage>
</ValidationRule>