force-app/main/default/objects/leaseworks__Calendar_Period__c/validationRules/leaseworks__Decimals_are_not_allowed_for_Year_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Decimals_are_not_allowed_for_Year_Field</fullName>
    <active>true</active>
    <description>Decimals Are Not Allowed For Year field.</description>
    <errorConditionFormula>false/*AND(!$Setup.LeaseWorksSettings__c.Disable_All_Triggers__c,
NOT(ISBLANK(Year__c)) &amp;&amp; MOD(Year__c, 1) &lt;&gt; 0)*/</errorConditionFormula>
    <errorDisplayField>leaseworks__Year__c</errorDisplayField>
    <errorMessage>Decimals are not allowed.</errorMessage>
</ValidationRule>