force-app/main/default/objects/leaseworks__Calendar_Period__c/validationRules/leaseworks__Month_Value_set.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Month_Value_set</fullName>
    <active>true</active>
    <description>Only Values from 1 to 12 can be taken.</description>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,
OR( leaseworks__Month__c &lt; 1 , leaseworks__Month__c &gt; 12))</errorConditionFormula>
    <errorDisplayField>leaseworks__Month__c</errorDisplayField>
    <errorMessage>Please enter month numbers between 1 and 12.</errorMessage>
</ValidationRule>