force-app/main/default/objects/leaseworks__Calendar_Period__c/validationRules/leaseworks__Year_Value_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Year_Value_Set</fullName>
    <active>true</active>
    <description>Only Values From 1000 to 9999 are Allowed.</description>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,
        OR( VALUE(leaseworks__Year_New__c) &lt; 1000 , VALUE(leaseworks__Year_New__c) &gt; 9999))</errorConditionFormula>
    <errorDisplayField>leaseworks__Year_New__c</errorDisplayField>
    <errorMessage>Please enter year numbers between 1000 and 9999.</errorMessage>
</ValidationRule>