force-app/main/default/objects/leaseworks__Calendar_Period__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Start_Date__c</columns>
    <columns>leaseworks__End_Date__c</columns>
    <columns>leaseworks__Closed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>